--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,7 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: Full Stack Web Developer Nano Degree  
+  uni: Oxford
+  year: June, 2015 &mdash; January, 2016
   # awards:
   # summary:
+  summary: New Summary changed degree, university and year
