--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -14,3 +14,8 @@
   duration: 2015 &mdash; Present
   url: "https://github.com/education/classroom"
   description: GitHub Classroom automates repository creation and access control, making it easy for teachers to distribute starter code and collect assignments on GitHub.
+  
+  # New Project
+- project: New Project
+  role: Developer
+  duration: 2018 &mdash; Present
